syntax = "proto3";

package user;

// Service Definition
service UserService{
    rpc CreateUser (UserRequest) returns (UserResponse);
    rpc GetAllUsers (Empty) returns (UserList);
}

//messgage
message UserRequest{
    string name=1;
    string email=2;
}


message UserResponse{
    string id=1;
    string name=2;
    string email=3;
}

message Empty {}

message UserList{
    repeated UserResponse users=1;
}